--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 body {
     box-sizing: border-box;
     margin: 0;
@@ -6,6 +13,123 @@ body {
     font-family: 'noto sans',sans-serif;
     color: #222222;
 }
+
+/* Estilo del nuevo nav  */
+
+a {
+    color: aliceblue;
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
+
+.nav-main ul {
+    display: flex;
+}
+
+.nav-main ul li{
+    padding: 6px;
+}
+
+.nav-main ul li a:hover {
+    border-bottom: 2px solid #ffffff;
+}
+.nav-main ul.nav-menu{
+    flex: 1;
+    margin-left: 20px;
+}
+
+.menu-btn {
+    display: none;
+}
+
+
+@media screen and (max-width: 600px) {
+   
+    .menu-btn {
+        display: block;
+    }
+
+    .nav-main ul.nav-menu {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #2f3640;
+        height: 100%;
+        padding: 20px;
+        opacity: .9;
+        transform: translatex(-500px);
+        transition: transform .5s ease-in-out;
+    }
+    .nav-main ul.nav-menu-derecha{
+        margin-right: 20px;
+    }
+
+    .nav-main ul.nav-menu.show {
+        transform: translateX(-20px);
+    }
+
+    .nav-main ul.nav-menu li{
+        padding: 20px;
+        font-size: 17px;
+    }
+    .cards-banner-one .content {
+        width: 80%;
+        padding: 60px 20px;
+        justify-content: flex-end;
+    }
+  }
+
+  
+  @media screen and (max-width: 300px) {
+
+    .cards-banner-one .content {
+        width: 100%;
+        padding: 60px 20px;
+        justify-content: flex-end;
+    }
+}
+
+
+.showcase{
+    width: 100%;
+    height: 550px;
+    background: url(img/escritorio2.jpg) no-repeat center center/cover;
+    padding: 50px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+.btn {
+    cursor: pointer;
+    display: inline-block;
+    border: 0;
+    font-weight: bold;
+    padding: 10px 10px;
+    background: #262626;
+    color: #ffffff;
+    font-size: 15px;
+    border: 1px solid #ffffff;
+    margin: 10px 0;
+}
+.btn:hover {
+    opacity: .6;
+} 
+
+.showcase h2
+.showcase p {
+    margin-bottom: 10px;
+}
+
+/* fin  de los estilos del nuevo nav  */
+
+/*Navegacion izquierda*/
+
 
 
 /* las clases reutilizables*/
@@ -130,7 +254,7 @@ nav>a:hover {
 
 }
 
-#titulo>h2 {
+#titulo > h2 {
     text-transform: uppercase;
     text-align: center;
     font-family: 'montserrant',sans-serif;
@@ -138,7 +262,7 @@ nav>a:hover {
     font-weight: 700;
 }
 
-#titulo>hr {
+#titulo > hr {
     width: 4.5rem;
     border-color: #44bd32;
 }
