--- a/style.css
+++ b/style.css
@@ -20,9 +20,21 @@ a {
     color: aliceblue;
     text-decoration: none;
 }
+
 ul{
     list-style: none;
 }
+
+
+/* Estilos de Parafos sorido0*/
+p {
+    font-size: 1em;
+    line-height: 1.5;
+    text-align: justify;
+    margin: 25px;
+}
+
+/* Estilos de Parafos sorido0*/
 
 .nav-main ul {
     display: flex;
@@ -92,7 +104,6 @@ ul{
     }
 }
 
-
 .showcase{
     width: 100%;
     height: 550px;
@@ -128,7 +139,14 @@ ul{
 
 /* fin  de los estilos del nuevo nav  */
 
-/*Navegacion izquierda*/
+/* inicio play grid  */
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+/* fin play grid  */
 
 
 
@@ -177,16 +195,15 @@ ul{
     font-weight: 700;
     font-stretch: wider;
 }
-nav>a {
+nav > a {
     text-decoration: none;
     color: white;
     padding-left: 1rem;
     padding-right: 1rem;
 }
 
-nav>a:hover {
+nav > a:hover {
     color: #44bd32;
-
 }
 
 #primera-seccion-contenido{
@@ -244,7 +261,7 @@ nav>a:hover {
     margin: auto;
     display: flex;
     flex-direction:column;
-    width: 88%;
+    width: 100%;
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
@@ -263,9 +280,11 @@ nav>a:hover {
 }
 
 #titulo > hr {
-    width: 4.5rem;
-    border-color: #44bd32;
+    width: 100%;
+    border-color: rgb(28 28 28 / 90%);
 }
+
+
 
 #container-tercera-seccion{
     text-align: center;
@@ -279,7 +298,7 @@ nav>a:hover {
 
 }
 
-.img-tercera>h6 {
+.container-img > h6 {
     text-align: center;
     font-family: 'montserrant',sans-serif;
     font-size: 1.3rem;
@@ -287,40 +306,18 @@ nav>a:hover {
     margin-bottom: 1rem.5rem;
 }
 
-.img-tercera.p{
+.container-img p{
     margin-bottom: 2rem;
 
 }
 
-.img-tercera > img {
+.container-img > img {
     max-width: 70%;
 }
 
-.img-cuarta{
-    padding-right: 1rem;
-    padding-left: 1rem;
+/*termina tercera seccion sorido0*/
 
-}
 
-.img-cuarta>h6 {
-    text-align: center;
-    font-family: 'montserrant',sans-serif;
-    font-size: 1.3rem;
-    font-weight: 200;
-    margin-bottom: 1rem.5rem;
-}
-
-.img-cuarta.p{
-    margin-bottom: 2rem;
-
-}
-
-.img-cuarta > img {
-    max-width: 105%;
-    margin-left: 1em;
-}
-
-/*termina tercera seccion*/
 /*comienza cuarta seccion*/
 
 
