--- a/style/style.css
+++ b/style/style.css
@@ -110,7 +110,7 @@ p {
 .showcase {
     width: 100%;
     height: 550px;
-    background: url(./img/escritorio2.jpg) no-repeat center center/cover;
+    background: url(/img/escritorio2.jpg) no-repeat center center/cover;
     padding: 50px;
     margin-bottom: 10px;
     display: flex;
@@ -187,7 +187,7 @@ p {
 /*comienza primera seccion*/
 
 .primera-seccion {
-    background: linear-gradient(rgba(68, 13, 13, 0.35), rgba(38, 2, 2, 0.445)), url(./img/qqq.jpg) no-repeat center/cover;
+    background: linear-gradient(rgba(68, 13, 13, 0.35), rgba(38, 2, 2, 0.445)), url(/img/qqq.jpg) no-repeat center/cover;
     background-attachment: fixed;
     height: 100vh;
     color: white;
