--- a/style/style.css
+++ b/style/style.css
@@ -110,7 +110,7 @@ p {
 .showcase {
     width: 100%;
     height: 550px;
-    background: url(./img/escritorio2.jpg) no-repeat center center/cover;
+    /* background: url(./img/escritorio2.jpg) no-repeat center center/cover; */
     padding: 50px;
     margin-bottom: 10px;
     display: flex;
@@ -187,11 +187,12 @@ p {
 /*comienza primera seccion*/
 
 .primera-seccion {
-    background: linear-gradient(rgba(68, 13, 13, 0.35), rgba(38, 2, 2, 0.445)), url(./img/qqq.jpg) no-repeat center/cover;
+    background: linear-gradient(rgba(68, 13, 13, 0.35), rgba(38, 2, 2, 0.445)), url(../img/qqq.jpg) no-repeat center/cover;
     background-attachment: fixed;
     height: 100vh;
     color: white;
 }
+
 
 #barra-navegacion {
     display: flex;
@@ -319,6 +320,7 @@ nav>a:hover {
 
 }
 
+
 .container-img>h6 {
     text-align: center;
     font-family: 'montserrant', sans-serif;
@@ -344,7 +346,7 @@ nav>a:hover {
 
 #cuarta-seccion {
 
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.905)), url(./img/portada.jpg) no-repeat center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.905)), url(../img/portada.jpg) no-repeat center/cover;
     background-attachment: fixed;
     height: 100vh;
     color: white;
